<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layout_userInfo"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/navigator_account_background"
                android:clickable="true"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:padding="@dimen/margin8"
                    android:src="@drawable/circle" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/margin8"
                        android:textColor="@color/colorAccent" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@android:drawable/divider_horizontal_bright"
                android:showDividers="middle"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_search"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:gravity="center_vertical"
                    android:text="@string/search" />

                <Button
                    android:id="@+id/button_map_all_clinics"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:gravity="center_vertical"
                    android:text="@string/map" />

                <Button
                    android:id="@+id/button_appointments"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:gravity="center_vertical"
                    android:text="@string/appointments" />
                <Button
                    android:id="@+id/button_medical_card"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:gravity="center_vertical"
                    android:text="@string/medical_card" />


                <Button
                    android:id="@+id/button_sign_in"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:gravity="center_vertical"
                    android:text="@string/log_in"
                    android:visibility="gone"/>

                <Button
                    android:id="@+id/button_settings"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:gravity="center_vertical"
                    android:text="@string/settings"/>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/layout_doctor_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@android:drawable/divider_horizontal_bright"
                android:showDividers="middle"
                android:orientation="vertical">


            </LinearLayout>

        </LinearLayout>

    </ScrollView>



</FrameLayout>