<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">
    <LinearLayout style="@style/FragmentAppBar">

        <ImageButton
            android:id="@+id/button_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="top|left"
            android:background="@android:color/transparent"
            android:foreground="?android:attr/actionBarItemBackground"
            android:src="@drawable/ic_arrow_back_white_24dp" />

        <TextView
            style="@style/FragmentTitle"
            android:text="@string/appointment_info" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView_"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@android:drawable/divider_horizontal_bright"
            android:orientation="vertical"
            android:showDividers="middle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/background_light"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/status_background_not_approoved"
                    android:paddingBottom="@dimen/margin8"
                    android:paddingLeft="@dimen/padding"
                    android:paddingRight="@dimen/padding"
                    android:paddingTop="@dimen/margin8"
                    android:text="@string/not_approved" />
            </LinearLayout>

            <LinearLayout
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/background_light"
                android:orientation="vertical"
                android:padding="@dimen/padding">

                <TextView
                    android:id="@+id/textView_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="date" />

                <TextView
                    android:id="@+id/textView_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="time" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/button_doctor"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/background_light"
                android:orientation="vertical"
                android:padding="@dimen/padding">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/doctor" />

                <TextView
                    android:id="@+id/textView_doctor_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <TextView
                    android:id="@+id/textView_doctor_specialisation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin"
                    android:layout_marginRight="@dimen/margin"
                    android:text="Specialisation"
                    android:textColor="@color/colorAccent"
                    android:visibility="visible" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/button_clinics"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/padding">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/clinic" />

                    <TextView
                        android:id="@+id/textView_clinic_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="TextView"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    <TextView
                        android:id="@+id/textView_clinic_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/clinic" />


            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>